@startuml
'https://plantuml.com/sequence-diagram


class Item
{
    -description
    -dueDate
    -isCompleted
    +Item(description, dueDate, isCompleted)
    +setDueDate()
    +setIsCompleted()
    setDescription()
    +getDescription()
    +getDueDate()
    +changeDate()
    +getIsCompleted()
}
class List
{
    -title
    -items
    +List(title)
    +getTitle()
    +setTitle()
    +addItem()
    +getItem()
}
class ListCollection
{
     -title
     -lists
     +addList()

}
Lists "1" *-- "many" List
List "1" *-- "many" Item

@enduml